  - New Config Option: global_town_settings.keep_inventory_on_death_in_arena
    - Default: false
    - If People should keep their inventories on death in an arena townblock. Is not guaranteed to work with other keep inventory plugins!
  - Make deprecated isWarTime() non-static.
  - New language: Bulgarian.
0.97.2.18:
  - Fix automatic tag setting picking up -'s and _'s.
  - Add new API to CombatUtil, courtesy of galacticwarrior9 with PR #5446. (First-Time Contributor!)
    - CombatUtil#isAlly(Resident, Resident)
    - CombatUtil#isEnemy(Resident, Resident)
  - Fix a nation removing an ally, and that causing the ally to remove the nation as an ally not throwing a NationRemoveAllyEvent.
  - Fix NationRemoveAllyEvent constructor.
  - Parse baltops asynchronously, courtesy of Gamer153 with PR #5444. (First-Time Contributor!)
  - Fix baltops not using cached balances.
  - API: Add new PlotChangeOwnerEvents, courtesy of Warriorrr and LlmDl with PR #5418.
    - PlotPreClaimEvent 
    - PlotClaimEvent
    - PlotPreUnclaimEvent
    - PlotUnclaimEvent
  - Bump language file to 0.134. 
  - Fix exception when running /plot claim, courtesy of Warriorrrr with PR #5448.
0.97.2.19:
  - Fix Entity Listener paying attention to cancelled events, closes #5449.
  - Fix /n tabcompleter missing "invite".
  - Make /towny top balance run things async, which should make it easier on servers when there's no cached bank balances to work off of.
  - Fix nation spawns not being cleared when a capital changes, courtesy of Warriorrrr with PR #5456.
  - Make the outsiders prevent pvp toggle apply to plots, courtesy of Warriorrrr with PR #5455.
  - Show online status for console when running /res, courtesy of Warriorrrr with PR #5457.
  - Set the nation spawn to the town's spawn on creation, courtesy of Warriorrrr with PR #5458.
0.97.3.0
  - Bump version number for release.
0.97.3.1:
  - Fix outlaws teleporting into towns they're outlawed in using /n spawn, courtesy of Warriorrrr with PR #5461. 