@@ -6982,3 +6982,4 @@ v0.92.0.11:
   - Bump version number for release.
 0.97.3.1:
   - Fix outlaws teleporting into towns they're outlawed in using /n spawn, courtesy of Warriorrrr with PR #5461. 
+  - Populate bukkit's /help towny page.
